walljump fixes

--- a/mz/styles.css
+++ b/mz/styles.css
@@ -1,11 +1,4 @@
-/* Custom font: DEGRADE */
-@font-face {
-  font-family: 'DEGRADE';
-  src: url('./DEGRADE.ttf') format('truetype');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
+/* DEGRADE font-face moved inline into index.php with cache-busted URL to match preload */
 
 /* VRUN MZ styles: full-viewport canvas, mobile-first */
 :root {
